--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "cargo-husky"
 version = "0.0.0"
 authors = ["rhysd <lin90162@yahoo.co.jp>"]
+description = "husky for cargo"
+license = "MIT"
 build = "build.rs"
 
 [dependencies]
