--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "cargo-husky"
-version = "0.0.4"
+version = "0.0.5"
 authors = ["rhysd <lin90162@yahoo.co.jp>"]
 description = "husky for cargo"
+repository = "https://github.com/rhysd/cargo-husky"
 license = "MIT"
 build = "build.rs"
+include = ["build.rs", "LICENSE.txt", "Cargo.toml", "src/**/*.rs"]
 
 [dependencies]
