--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ postmerge-hook = []
 run-cargo-test = []
 run-cargo-check = []
 run-cargo-clippy = []
+run-cargo-fmt = []
 user-hooks = []
 
 [dependencies]
