add config for cargo-release [skip ci]

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ license-file = "LICENSE.txt"
 build = "build.rs"
 include = ["build.rs", "LICENSE.txt", "Cargo.toml", "src/**/*.rs"]
 
+[package.metadata.release]
+no-dev-version = true
+
 [badges]
 travis-ci = { repository = "rhysd/cargo-husky" }
 appveyor = { repository = "rhysd/cargo-husky" }
