Add ability and default to running cargo with --all

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ name = "integration"
 path = "test/test.rs"
 
 [features]
-default = ["prepush-hook", "run-cargo-test"]
+default = ["prepush-hook", "run-cargo-test", "run-for-all"]
 prepush-hook = []
 precommit-hook = []
 postmerge-hook = []
@@ -33,6 +33,7 @@ run-cargo-test = []
 run-cargo-check = []
 run-cargo-clippy = []
 run-cargo-fmt = []
+run-for-all = []
 user-hooks = []
 
 [dependencies]
