describe $CARGO_HUSKY_DONT_INSTALL_HOOKS in README and update maintenance badge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ no-dev-version = true
 [badges]
 travis-ci = { repository = "rhysd/cargo-husky" }
 appveyor = { repository = "rhysd/cargo-husky" }
-maintenance = { status = "actively-developed" }
+maintenance = { status = "passively-maintained" }
 
 [[test]]
 name = "integration"
