chore: specify license field in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 keywords = ["git", "hook", "cargo"]
 categories = ["development-tools"]
 license-file = "LICENSE.txt"
+license = "MIT"
 build = "build.rs"
 include = ["build.rs", "LICENSE.txt", "Cargo.toml", "src/**/*.rs"]
 
