--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ run-cargo-test = []
 run-cargo-check = []
 run-cargo-clippy = []
 run-cargo-fmt = []
+run-cargo-fmt-write = []
 run-for-all = []
 user-hooks = []
 
